<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MyActivity">



    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backarrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="?attr/actionModeCloseDrawable" />

        <ImageView
            android:id="@+id/img_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@android:dimen/app_icon_size"
            android:layout_marginTop="@android:dimen/app_icon_size"
            android:layout_marginRight="@android:dimen/app_icon_size"
            android:layout_marginBottom="0dp"
            app:srcCompat="@mipmap/study2"
            tools:srcCompat="@mipmap/study2" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@android:dimen/app_icon_size"
            android:gravity="center"
            android:text="@string/time"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@android:dimen/app_icon_size"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"

            android:drawableRight="@android:drawable/btn_star"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/gold"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@android:dimen/app_icon_size"
            android:layout_marginTop="@android:dimen/app_icon_size"
            android:layout_marginRight="@android:dimen/app_icon_size"
            android:layout_marginBottom="@android:dimen/app_icon_size"
            android:layout_weight="1"
            android:gravity="center"
            android:lines="2"
            android:text="@string/congratulation"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@android:dimen/app_icon_size"
            android:background="@drawable/btn_bg"
            android:text="@string/btn_study"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>